--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.9.0"
+    "react-native-svg": "^13.9.0",
+    "react-native-vision-camera": "^3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
