--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "moti": "^0.25.3",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.72.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.3.0",
@@ -30,20 +30,21 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/runtime": "^7.22.5",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.6",
     "@tsconfig/react-native": "^3.0.2",
-    "@types/jest": "^29.5.2",
+    "@types/metro-config": "^0.76.3",
     "@types/react": "^18.2.12",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.5.0",
     "eslint": "^8.42.0",
     "jest": "^29.5.0",
-    "metro-react-native-babel-preset": "0.76.6",
+    "metro-react-native-babel-preset": "0.77.0",
     "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.1.3"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=16"
   }
 }
